# ai-agent-test-platform

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.en.md  README.md  install_deps.sh  pyproject.toml  req.txt
.bmad-core/: install-manifest.yaml
.bmad-core/templates/: fullstack-architecture-tmpl.yaml
.claude/: settings.local.json
apps/platform-api/: .gitignore  (+4 more)
backend/: __init__.py
docs/: README.md  ai-deployment-assistant-instruction.md  deployment-guide.md  development-paradigm.md  env-matrix.md  local-deployment-contract.yaml  local-dev.md  migration-notes.md  repo-layout.md  startup-verification-guide.md
examples/: agent_call_tools.py  agent_core_example_broadcast.py  agent_core_example_direct.py  agent_core_example_direct_send_message_agent.py  autogen_chat.py  autogen_model.py  document_service.py  file_processor.py  graphflow_demo.py  image_analyzer.py  marker_example.py  memory.py  multi_agent.py  openai_chat.py  requirement_agents.py  requirements.py  team.py  topic.py  topic1.py
frontend/: vite.config.ts
langgraph_teach/teach_agent_use_3/: graph.json  langgraph.json  main.py  pyproject.toml  sql_agent.py  start_server.py  tools.py
langgraph_teach/teach_agent_use_3/graphs_examples/: test_cases_20251106_105918.xlsx  tool_call_example.py
langgraph_teach/teach_agent_use_3/src/: llms.py
langgraph_teach/teach_agent_use_3/src/file_agent/: main.py
scripts/: check-health.sh  dev-down.sh  dev-up.sh  migrate_database.py  setup_mysql.py  switch_database.py
tests/: test_testcase_module.py
uitest/: package-lock.json  package.json
(+506 files in other folders)
