[project]
name = "2025-11-01-graph-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.6.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "python-dotenv>=1.2.1",
]
